--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       localeApp = 'resources/locale/' + lang + '.js';
 
     document.write('<script type="text/javaScript" src="'+ localeApp +'"></'+'script>');
+    document.write('<script type="text/javaScript" src="resources/help/help.js"></'+'script>')
     </script>
 
     <script type="text/javascript">
